--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "php" : "~7.1"
     },
     "require-dev": {
-        "phpunit/phpunit" : ">=7.0"
+        "phpunit/phpunit" : ">=7.0",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -37,6 +38,8 @@
         }
     },
     "scripts": {
-        "test": "phpunit"
+        "test": "phpunit",
+        "check-style": "phpcs src",
+        "fix-style": "phpcbf src"
     }
 }
