--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
         "slovenia"
     ],
     "require": {
-        "php" : "~7.1"
+        "php" : "^7.1|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : ">=7.0",
-        "squizlabs/php_codesniffer": "^3.0"
+        "phpunit/phpunit" : ">=9.0",
+        "squizlabs/php_codesniffer": "^3.4"
     },
     "autoload": {
         "psr-4": {
