--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,10 @@
         "slovenia"
     ],
     "require": {
-        "php" : "^7.3|^8.0"
+        "php" : "^7.2|^7.3|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : ">=9.0",
+        "phpunit/phpunit" : ">=8.0",
         "squizlabs/php_codesniffer": "^3.4"
     },
     "autoload": {
