Skip downloading phpunit config

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,5 +12,6 @@
 /ISSUE_TEMPLATE.md           export-ignore
 /phpcs.xml.dist              export-ignore
 /phpunit.xml.dist            export-ignore
+/phpunit.xml                 export-ignore
 /tests                       export-ignore
 /docs export-ignore
