--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     },
     "require-dev": {
         "phpunit/phpunit" : ">=9.0",
-        "squizlabs/php_codesniffer": "^3.4"
+        "squizlabs/php_codesniffer": "^3.4",
+        "phpstan/phpstan": "^1.10"
     },
     "autoload": {
         "psr-4": {
@@ -39,6 +40,7 @@
     },
     "scripts": {
         "test": "phpunit",
+        "stan": "phpstan analyse",
         "check-style": "phpcs src",
         "fix-style": "phpcbf src"
     }
